src/test/deca/syntax/invalid/HelloWorld/LexRejectedChar.deca
// Description:
//    Program using lexically incorrect characters. 
//
// Results:
//    Line 11 : token recognition error
//
// History:
//    cree le 05/01/2022

{
ø
}
